--- a/src/main/resources/ucr/lab/rat-in-maze.fxml
+++ b/src/main/resources/ucr/lab/rat-in-maze.fxml
@@ -10,23 +10,22 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #f9e79f;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucr.lab.controller.RatInMazeController">
    <children>
-      <TextArea layoutY="-1.0" opacity="0.46" prefHeight="69.0" prefWidth="603.0" style="-fx-background-color: #f39c12;" stylesheets="@stylesheet.css" />
+      <TextArea layoutY="-1.0" opacity="0.08" prefHeight="69.0" prefWidth="603.0" style="-fx-background-color: #f39c12;" stylesheets="@stylesheet.css" />
       <Text layoutX="195.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rat in Maze">
          <font>
             <Font size="41.0" />
          </font>
       </Text>
-      <Text layoutX="152.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select the Maze: ">
+      <Text layoutX="152.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select the maze: ">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
       <Pane layoutX="301.0" layoutY="79.0" prefHeight="27.0" prefWidth="137.0">
          <children>
-            <MenuButton accessibleRole="COMBO_BOX" layoutX="6.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="128.0" text="Maze">
+            <MenuButton accessibleRole="COMBO_BOX" layoutX="9.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="128.0" text="Maze">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
@@ -36,14 +35,14 @@
       </Pane>
       <TableView layoutX="12.0" layoutY="173.0" prefHeight="200.0" prefWidth="280.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" maxWidth="750.0" minWidth="30.0"/>
-          <TableColumn prefWidth="75.0" text="C2" maxWidth="750.0" minWidth="30.0"/>
+          <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C1" />
+          <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C2" />
         </columns>
       </TableView>
       <TableView layoutX="309.0" layoutY="173.0" prefHeight="200.0" prefWidth="280.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" maxWidth="750.0" minWidth="30.0"/>
-          <TableColumn prefWidth="75.0" text="C2" maxWidth="750.0" minWidth="30.0"/>
+          <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C1" />
+          <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C2" />
         </columns>
       </TableView>
       <Text layoutX="411.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Solution">
