--- a/src/main/resources/ucr/lab/rat-in-maze.fxml
+++ b/src/main/resources/ucr/lab/rat-in-maze.fxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #f9e79f;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucr.lab.controller.RatInMazeController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #f9e79f;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucr.lab.controller.RatInMazeController">
    <children>
       <TextArea layoutY="-1.0" opacity="0.08" prefHeight="69.0" prefWidth="603.0" style="-fx-background-color: #f39c12;" stylesheets="@stylesheet.css" />
       <Text layoutX="195.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rat in Maze">
@@ -25,21 +19,16 @@
       </Text>
       <Pane layoutX="301.0" layoutY="79.0" prefHeight="27.0" prefWidth="137.0">
          <children>
-            <MenuButton accessibleRole="COMBO_BOX" layoutX="9.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="128.0" text="Maze">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
-            </MenuButton>
+            <ComboBox fx:id="cbMaze" layoutY="1.0" onShowing="#listarMaze" prefWidth="150.0" promptText="Maze" />
          </children>
       </Pane>
-      <TableView layoutX="12.0" layoutY="173.0" prefHeight="200.0" prefWidth="280.0">
+      <TableView fx:id="tvInicial" layoutX="12.0" layoutY="173.0" prefHeight="200.0" prefWidth="280.0">
         <columns>
           <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C1" />
           <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C2" />
         </columns>
       </TableView>
-      <TableView layoutX="309.0" layoutY="173.0" prefHeight="200.0" prefWidth="280.0">
+      <TableView fx:id="tvSolution" layoutX="309.0" layoutY="173.0" prefHeight="200.0" prefWidth="280.0">
         <columns>
           <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C1" />
           <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C2" />
