--- a/src/main/resources/ucr/lab/rat-in-maze.fxml
+++ b/src/main/resources/ucr/lab/rat-in-maze.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #f9e79f;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucr.lab.controller.RatInMazeController">
+<AnchorPane prefHeight="512.0" prefWidth="709.0" style="-fx-background-color: #f9e79f;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucr.lab.controller.RatInMazeController">
    <children>
-      <TextArea layoutY="-1.0" opacity="0.08" prefHeight="69.0" prefWidth="603.0" style="-fx-background-color: #f39c12;" stylesheets="@stylesheet.css" />
-      <Text layoutX="195.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rat in Maze">
+      <TextArea layoutX="33.0" layoutY="-3.0" opacity="0.08" prefHeight="72.0" prefWidth="746.0" style="-fx-background-color: #f39c12;" stylesheets="@stylesheet.css" />
+      <Text layoutX="290.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rat in Maze">
          <font>
             <Font size="41.0" />
          </font>
@@ -19,30 +24,21 @@
       </Text>
       <Pane layoutX="301.0" layoutY="79.0" prefHeight="27.0" prefWidth="137.0">
          <children>
-            <ComboBox fx:id="cbMaze" layoutY="1.0" onShowing="#listarMaze" prefWidth="150.0" promptText="Maze" />
+            <ComboBox fx:id="cbMaze" layoutY="1.0" onAction="#resolver" onShowing="#listarMaze" prefWidth="150.0" promptText="Maze" />
          </children>
       </Pane>
-      <TableView fx:id="tvInicial" layoutX="12.0" layoutY="173.0" prefHeight="200.0" prefWidth="280.0">
-        <columns>
-          <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C1" />
-          <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C2" />
-        </columns>
-      </TableView>
-      <TableView fx:id="tvSolution" layoutX="309.0" layoutY="173.0" prefHeight="200.0" prefWidth="280.0">
-        <columns>
-          <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C1" />
-          <TableColumn maxWidth="750.0" minWidth="30.0" prefWidth="75.0" text="C2" />
-        </columns>
-      </TableView>
-      <Text layoutX="411.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Solution">
+      <TableView fx:id="tvInicial" layoutX="66.0" layoutY="173.0" prefHeight="329.0" prefWidth="321.0" />
+      <TableView fx:id="tvSolution" layoutX="396.0" layoutY="173.0" prefHeight="329.0" prefWidth="366.0" />
+      <Text layoutX="544.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Solution">
          <font>
             <Font size="21.0" />
          </font>
       </Text>
-      <Text layoutX="127.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inicial">
+      <Text layoutX="213.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inicial">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
+      <Button fx:id="btShow" layoutX="485.0" layoutY="80.0" mnemonicParsing="false" onAction="#resolver" text="Show" />
    </children>
 </AnchorPane>
