NQueen de Jimee y knightTour

--- a/src/main/resources/ucr/lab/stylesheet.css
+++ b/src/main/resources/ucr/lab/stylesheet.css
@@ -11,7 +11,7 @@
     }
     
     .button {
-        -fx-font-family: "Arial";
+        -fx-font-family: "Baskerville Old Face";
         -fx-font-size: 25px;
         -fx-font-weight: bold;
         -fx-background-color: lightskyblue;
