--- a/src/main/resources/ucr/lab/hello-view.fxml
+++ b/src/main/resources/ucr/lab/hello-view.fxml
@@ -9,52 +9,52 @@
 
 <BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="694.0" prefWidth="1006.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucr.lab.controller.HelloController">
     <left>
-        <VBox prefHeight="669.0" prefWidth="217.0" style="-fx-background-color: #0D1824;" BorderPane.alignment="CENTER">
+        <VBox prefHeight="669.0" prefWidth="217.0" style="-fx-background-color: #A7D8D7;" BorderPane.alignment="CENTER">
             <children>
-                <Button mnemonicParsing="false" onAction="#Home" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Home" textFill="WHITE">
+                <Button mnemonicParsing="false" onAction="#Home" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: #80A9A1; -fx-border-width: 0px 0px 2px 0px;" text="Home" textFill="#2F4F4F">
                     <font>
-                        <Font name="Arial" size="30.0" />
+                        <Font name="Baskerville Old Face" size="30.0" />
                     </font>
                 </Button>
-                <Button layoutX="10.0" layoutY="72.0" mnemonicParsing="false" onAction="#Knapsack" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Knapsack" textFill="WHITE">
+                <Button layoutX="10.0" layoutY="72.0" mnemonicParsing="false" onAction="#Knapsack" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: #80A9A1; -fx-border-width: 0px 0px 2px 0px;" text="Knapsack" textFill="#2F4F4F">
                     <font>
-                        <Font name="Arial" size="30.0" />
+                        <Font name="Baskerville Old Face" size="30.0" />
                     </font>
                 </Button>
-                <Button layoutX="10.0" layoutY="72.0" mnemonicParsing="false" onAction="#NQueen" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="N Queen" textFill="WHITE">
+                <Button layoutX="10.0" layoutY="72.0" mnemonicParsing="false" onAction="#NQueen" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: #80A9A1; -fx-border-width: 0px 0px 2px 0px;" text="N Queen" textFill="#2F4F4F">
                     <font>
-                        <Font name="Arial" size="30.0" />
+                        <Font name="Baskerville Old Face" size="30.0" />
                     </font>
                 </Button>
-                <Button layoutX="10.0" layoutY="134.0" mnemonicParsing="false" onAction="#KnightTour" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Knight Tour" textFill="WHITE">
+                <Button layoutX="10.0" layoutY="134.0" mnemonicParsing="false" onAction="#KnightTour" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: #80A9A1; -fx-border-width: 0px 0px 2px 0px;" text="Knight Tour" textFill="#2F4F4F">
                     <font>
-                        <Font name="Arial" size="30.0" />
+                        <Font name="Baskerville Old Face" size="30.0" />
                     </font>
                 </Button>
-                <Button layoutX="10.0" layoutY="196.0" mnemonicParsing="false" onAction="#RatInMaze" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Rat In Maze" textFill="WHITE">
+                <Button layoutX="10.0" layoutY="196.0" mnemonicParsing="false" onAction="#RatInMaze" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: #80A9A1; -fx-border-width: 0px 0px 2px 0px;" text="Rat In Maze" textFill="#2F4F4F">
                     <font>
-                        <Font name="Arial" size="30.0" />
+                        <Font name="Baskerville Old Face" size="30.0" />
                     </font>
                 </Button>
-            <Button mnemonicParsing="false" onAction="#SudokuSolver" onMousePressed="#sudokuOnMousePressed" prefHeight="62.0" prefWidth="217.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Sudoku" textFill="WHITE">
+            <Button mnemonicParsing="false" onAction="#SudokuSolver" onMousePressed="#sudokuOnMousePressed" prefHeight="62.0" prefWidth="217.0" style="-fx-background-color: transparent; -fx-border-color: #80A9A1; -fx-border-width: 0px 0px 2px 0px;" text="Sudoku" textFill="#2F4F4F">
                <font>
-                  <Font name="Arial" size="30.0" />
+                  <Font name="Baskerville Old Face" size="30.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onAction="#Exit" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Exit" textFill="WHITE">
+            <Button mnemonicParsing="false" onAction="#Exit" prefHeight="62.0" prefWidth="219.0" style="-fx-background-color: transparent; -fx-border-color: #80A9A1; -fx-border-width: 0px 0px 2px 0px;" text="Exit" textFill="#2F4F4F">
                <font>
-                  <Font name="Arial" size="30.0" />
+                  <Font name="Baskerville Old Face" size="30.0" />
                </font>
             </Button>
             </children>
         </VBox>
     </left>
     <center>
-        <AnchorPane fx:id="ap" prefHeight="694.0" prefWidth="789.0" style="-fx-background-color: #141428;" BorderPane.alignment="CENTER">
+        <AnchorPane fx:id="ap" prefHeight="694.0" prefWidth="789.0" style="-fx-background-color: #B3E1E1;" BorderPane.alignment="CENTER">
             <children>
-                <Text fx:id="txtMessage" fill="#f7f7f7" layoutX="4.0" layoutY="360.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Laboratory No. 2" textAlignment="CENTER" wrappingWidth="781.94921875">
+                <Text fx:id="txtMessage" fill="DARKSLATEGRAY" layoutX="4.0" layoutY="360.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Laboratory No. 2" textAlignment="CENTER" wrappingWidth="781.94921875">
                     <font>
-                        <Font name="Arial" size="40.0" />
+                        <Font name="Baskerville Old Face" size="40.0" />
                     </font>
                 </Text>
             </children>
