--- a/src/main/resources/ucr/lab/rat-in-maze.fxml
+++ b/src/main/resources/ucr/lab/rat-in-maze.fxml
@@ -27,8 +27,14 @@
             <ComboBox fx:id="cbMaze" layoutY="1.0" onAction="#resolver" onShowing="#listarMaze" prefWidth="150.0" promptText="Maze" />
          </children>
       </Pane>
-      <TableView fx:id="tvInicial" layoutX="66.0" layoutY="173.0" prefHeight="329.0" prefWidth="321.0" />
-      <TableView fx:id="tvSolution" layoutX="396.0" layoutY="173.0" prefHeight="329.0" prefWidth="366.0" />
+      <TableView fx:id="tvInicial" layoutX="66.0" layoutY="173.0" prefHeight="329.0" prefWidth="321.0">
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy></TableView>
+      <TableView fx:id="tvSolution" layoutX="396.0" layoutY="173.0" prefHeight="329.0" prefWidth="366.0">
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy></TableView>
       <Text layoutX="544.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Solution">
          <font>
             <Font size="21.0" />
